monProjetApex/force-app/main/default/objects/Livraison__c/fields/DateExpedition__c.field-meta.xml
<CustomField>
    <fullName>DateExpedition__c</fullName>
    <label>DateExpedition</label>
    <type>Date</type>
</CustomField>