monProjetApex/force-app/main/default/objects/Livraison__c/fields/DateLivraisonEstimee__c.field-meta.xml
<CustomField>
    <fullName>DateLivraisonEstimee__c</fullName>
    <label>DateLivraisonEstimee</label>
    <type>Date</type>
</CustomField>