monProjetApex/force-app/main/default/objects/Livraison__c/fields/statut__c.field-meta.xml
<CustomField>
    <fullName>statut__c</fullName>
    <label>statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En préparation</fullName>
            </value>
            <value>
                <fullName>Expédiée</fullName>
            </value>
            <value>
                <fullName>Livrée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>