monProjetApex/force-app/main/default/objects/Livraison__c/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarif</label>
    <referenceTo>TarifLivraison__c</referenceTo>
    <relationshipLabel>Livraisons (Tarif)</relationshipLabel>
    <relationshipName>Livraisons1</relationshipName>
    <type>Lookup</type>
</CustomField>