monProjetApex/force-app/main/default/objects/Livraison__c/fields/TarifLivraison__c.field-meta.xml
<CustomField>
    <fullName>TarifLivraison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TarifLivraison</label>
    <referenceTo>TarifLivraison__c</referenceTo>
    <relationshipLabel>Livraisons</relationshipLabel>
    <relationshipName>Livraisons</relationshipName>
    <type>Lookup</type>
</CustomField>